sidebar links and logo section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <body>
         <aside id="sidebar">
             <section>Logo</section>
+            <section id="sidebar-links">
+                <div>
+                    <a href="#">Overview</a>
+                </div>
+                <div>
+                    <a href="#">Tasks</a>
+                </div>
+                <div>
+                    <a href="#">Documents</a>
+                </div>
+                <div>
+                    <a href="#">Notes</a>
+                </div>
+                <div>
+                    <a href="#">Output</a>
+                </div>
+                <div>
+                    <a href="#">Support</a>
+                </div>
+            </section>
         </aside>
     </body>
 </html>
