sidebar links done

--- a/index.html
+++ b/index.html
@@ -5,27 +5,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Notes view</title>
         <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
     </head>
     <body>
         <aside id="sidebar">
-            <section>Logo</section>
+            <section id="logo">
+                <img src="./assets/logo.png" alt="logo" />
+            </section>
             <section id="sidebar-links">
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-qrcode"></i>
                     <a href="#">Overview</a>
                 </div>
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-calendar-o"></i>
                     <a href="#">Tasks</a>
                 </div>
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-file-text-o"></i>
                     <a href="#">Documents</a>
                 </div>
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-clone"></i>
                     <a href="#">Notes</a>
                 </div>
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-line-chart"></i>
                     <a href="#">Output</a>
                 </div>
-                <div>
+                <div class="sidebar-links-containers">
+                    <i class="fa fa-headphones"></i>
                     <a href="#">Support</a>
                 </div>
             </section>
