main section data

--- a/index.html
+++ b/index.html
@@ -68,7 +68,207 @@
                 </div>
             </header>
 
-            <section id="main-notes-container"></section>
+            <section id="main-notes-container">
+                <div id="filters-bar">
+                    <div>
+                        <button class="filter-active">All</button>
+                        <button>Projects</button>
+                        <button>Business</button>
+                        <button>Personal</button>
+                    </div>
+                    <div id="filters-bar-note">
+                        <i class="fa fa-plus-circle"></i>
+                        <span id="add-note">Add a new note</span>
+                    </div>
+                </div>
+
+                <div id="notes-container">
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">23 June, 2017</span>
+                        <h3>Simple homework</h3>
+                        <p>
+                            This is a simple sample text for a simple homework
+                            assigned by Simply technologies.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
