notes section done

--- a/index.html
+++ b/index.html
@@ -92,12 +92,53 @@
                         </p>
                     </div>
                     <div class="note-card">
+                        <span class="note-card-date">01 July, 2022</span>
+                        <h3>Great Vacation!</h3>
+                        <img
+                            src="./assets/notes-images/image2.png"
+                            alt="note image"
+                        />
+                    </div>
+                    <div class="note-card">
                         <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
+                        <h3>History Lecture</h3>
                         <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
+                            Fedayi movement, Russian empire, Western and Eastern
+                            Armenia during 1900-1914.
                         </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">10 March, 2025</span>
+                        <h3>Make a cucumber jam</h3>
+                        <p>
+                            Recipe: 4 tons of cucumber, 5 tbsp salt, 10 liters
+                            of water from river, honey to taste.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">18 June, 2024</span>
+                        <h3>Trip to Gyumri</h3>
+                        <p>
+                            Make a trip plan - count the money we need, take
+                            some food, medicaments, rent a house.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">04 April, 2009</span>
+                        <h3>Night sky.</h3>
+                        <img
+                            src="./assets/notes-images/image1.png"
+                            alt="note image"
+                        />
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">05 May, 2019</span>
+                        <h3>New York cityscape</h3>
+                        <p>A beautiful photo.</p>
+                        <img
+                            src="./assets/notes-images/image3.png"
+                            alt="note image"
+                        />
                     </div>
                     <div class="note-card">
                         <span class="note-card-date">23 June, 2017</span>
@@ -108,12 +149,53 @@
                         </p>
                     </div>
                     <div class="note-card">
+                        <span class="note-card-date">01 July, 2022</span>
+                        <h3>Great Vacation!</h3>
+                        <img
+                            src="./assets/notes-images/image2.png"
+                            alt="note image"
+                        />
+                    </div>
+                    <div class="note-card">
                         <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
+                        <h3>History Lecture</h3>
                         <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
+                            Fedayi movement, Russian empire, Western and Eastern
+                            Armenia during 1900-1914.
                         </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">10 March, 2025</span>
+                        <h3>Make a cucumber jam</h3>
+                        <p>
+                            Recipe: 4 tons of cucumber, 5 tbsp salt, 10 liters
+                            of water from river, honey to taste.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">18 June, 2024</span>
+                        <h3>Trip to Gyumri</h3>
+                        <p>
+                            Make a trip plan - count the money we need, take
+                            some food, medicaments, rent a house.
+                        </p>
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">04 April, 2009</span>
+                        <h3>Night sky.</h3>
+                        <img
+                            src="./assets/notes-images/image1.png"
+                            alt="note image"
+                        />
+                    </div>
+                    <div class="note-card">
+                        <span class="note-card-date">05 May, 2019</span>
+                        <h3>New York cityscape</h3>
+                        <p>A beautiful photo.</p>
+                        <img
+                            src="./assets/notes-images/image3.png"
+                            alt="note image"
+                        />
                     </div>
                     <div class="note-card">
                         <span class="note-card-date">23 June, 2017</span>
@@ -124,148 +206,53 @@
                         </p>
                     </div>
                     <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
+                        <span class="note-card-date">01 July, 2022</span>
+                        <h3>Great Vacation!</h3>
+                        <img
+                            src="./assets/notes-images/image2.png"
+                            alt="note image"
+                        />
                     </div>
                     <div class="note-card">
                         <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
+                        <h3>History Lecture</h3>
                         <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
+                            Fedayi movement, Russian empire, Western and Eastern
+                            Armenia during 1900-1914.
                         </p>
                     </div>
                     <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
+                        <span class="note-card-date">10 March, 2025</span>
+                        <h3>Make a cucumber jam</h3>
                         <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
+                            Recipe: 4 tons of cucumber, 5 tbsp salt, 10 liters
+                            of water from river, honey to taste.
                         </p>
                     </div>
                     <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
+                        <span class="note-card-date">18 June, 2024</span>
+                        <h3>Trip to Gyumri</h3>
                         <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
+                            Make a trip plan - count the money we need, take
+                            some food, medicaments, rent a house.
                         </p>
                     </div>
                     <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
+                        <span class="note-card-date">04 April, 2009</span>
+                        <h3>Night sky.</h3>
+                        <img
+                            src="./assets/notes-images/image1.png"
+                            alt="note image"
+                        />
                     </div>
                     <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
-                    </div>
-                    <div class="note-card">
-                        <span class="note-card-date">23 June, 2017</span>
-                        <h3>Simple homework</h3>
-                        <p>
-                            This is a simple sample text for a simple homework
-                            assigned by Simply technologies.
-                        </p>
+                        <span class="note-card-date">05 May, 2019</span>
+                        <h3>New York cityscape</h3>
+                        <p>A beautiful photo.</p>
+                        <img
+                            src="./assets/notes-images/image3.png"
+                            alt="note image"
+                        />
                     </div>
                 </div>
             </section>
