made the template responsive, all done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 </nav>
                 <hr />
             </section>
+
+            <section id="sidebar-footer">
+                <span>2025 Notable. All rights reserved.</span>   
+            </section>
         </aside>
 
         <main>
